# rust_sync

./: .envrc  .gitignore  Cargo.toml  Makefile  flake.nix
doc/presentation/: presentation.tex
doc/presentation/demo/: erreur-01.rs  erreur-02.rs  extern-01.rs  generation.rs  typage-01.rs
doc/rapport/: rapport.tex
examples/: example.rs  reset.rs  test.rs  thread.rs
src/: codegen.rs  error.rs  lib.rs  parser.rs  scheduler.rs  typing.rs
tests/: codegen.rs  parsing.rs  scheduling.rs  tests.rs  typing.rs
tests/codegen/fail/: extern-01.rs  extern-01.stderr  extern-02.rs  extern-02.stderr  extern-03.rs  extern-03.stderr  extern_function1.rs  extern_function1.stderr  extern_function2.rs  extern_function2.stderr  extern_function3.rs  extern_function3.stderr
tests/codegen/pass/: extern-01.rs  extern_function.rs  iterators-01.rs  iterators-02.rs  iterators-03.rs  jean-01.rs  test1.rs
tests/parsing/fail/: clock-type-01.rs  clock-type-01.stderr  export-01.rs  export-01.stderr  jean-fait-une-grammaire-01.rs  jean-fait-une-grammaire-01.stderr  jean-fait-une-grammaire-02.rs  jean-fait-une-grammaire-02.stderr  jean-fait-une-grammaire-03.rs  jean-fait-une-grammaire-03.stderr  spawn-01.rs  spawn-01.stderr  spawn-02.rs  spawn-02.stderr
tests/parsing/pass/: clock-type-01.rs  jean-fait-une-grammaire-02.rs  jean-fait-une-grammaire-03.rs  oui.rs  spawn-01.rs  spawn-02.rs  spawn-03.rs  types-01.rs  types-02.rs  types-03.rs  types-04.rs
tests/scheduling/fail/: basic-1.rs  basic-1.stderr  basic-2.rs  basic-2.stderr  nodes-1.rs  nodes-1.stderr  nodes-2.rs  nodes-2.stderr
(+93 files in other folders)
