[package]
name = "rustre"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rustre"
proc-macro = true
path = "src/lib.rs"

[dependencies]
syn = { version = "2.0", features = ["extra-traits"] }
quote = "1.0"
prettyplease = "0.2"
proc-macro2 = "1.0"
proc-macro-error = "1"
patricia_tree = "0.6.3"
itertools = "0.12.0"
smallvec = "1"

[dev-dependencies]
trybuild = "1"
